Реализовать Admin: События (Get API)